k8s-new/k8s-labs/modules/04-networking/manifests/netpol/allow-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: net-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 80
