k8s-new/k8s-labs/modules/04-networking/manifests/netpol/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: lab
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
